# Natural-selection-on-sleep-duration-in-Drosophila-melanogaster

./: README.md  analysis_example.sh  main.py  plot.py  pyproject.toml  setup.cfg  wrangle.py
okazaki_drift/: README.md  basic_drift_simulation.py  data_computations.py  iox.py  likelihood_plots.py  okazaki_drift.py
