[metadata]
name = okazaki_drift
version = 1.0
author = Caetano Souto-Maior
author_email = caetanosoutomaior@protonmail.com
description = Package providing functions for Wrigth-Fisher computations of genetic drift/likelihood analyses (Figure 3B-E) in Souto-Maior et al. (2020)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caesoma/Natural-selection-on-sleep-duration-in-Drosophila-melanogaster
project_urls =
    Bug Tracker = https://github.com/caesoma/Natural-selection-on-sleep-duration-in-Drosophila-melanogaster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU AGPLv3"
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
